# hstats

./: README.md  hstats.cabal  stack.yaml
data/: commitMsgPrefixes.yaml
src/: Commit.hs  Contributor.hs  FileStat.hs  GitDir.hs  GitFile.hs  Hot.hs  Lib.hs  LineParsers.hs  Loc.hs  Main.hs  Printer.hs  Util.hs  lineParsers.yaml
src/cli/: Cli.hs  Main.hs
src/lib/: Categories.hs  Commit.hs  CommitMsgParsers.hs  FileStat.hs  GitDir.hs  GitFile.hs  Hot.hs  LineParsers.hs  Util.hs
test/: GitDirTest.hs  Main.hs  UtilTest.hs
