name:                hstats
version:             0.1.0.0
synopsis:            CLI tool for code stats, written in Haskell
description:         CLI tool for code stats, written in Haskell
homepage:            https://github.com/githubuser/hstats#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
data-files:          data/lineParsers.yaml
cabal-version:       >=1.10

executable hstats
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5,
                       directory,
                       filepath,
                       regex-posix,
                       containers,
                       yaml,
                       bytestring,
                       split,
                       time,
                       process


  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       Loc,
                       Printer,
                       LineParsers
  build-depends:       base >= 4.7 && < 5,
                       directory,
                       filepath,
                       regex-posix,
                       containers,
                       yaml,
                       bytestring,
                       split,
                       time,
                       process


  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hstats
