name:                hstats
version:             0.1.0.0
synopsis:            CLI tool for code stats, written in Haskell
description:         CLI tool for code stats, written in Haskell
homepage:            https://github.com/githubuser/hstats#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
data-files:          data/lineParsers.yaml
cabal-version:       >=1.10

library
  hs-source-dirs:      src/lib
  exposed-modules:     Loc,
                       Hot,
                       Printer,
                       Util,

                       Commit,
                       Contributor,
                       FileStat,
                       GitDir,
                       GitFile,
                       LineParsers,
                       Paths_hstats

  build-depends:       base >= 4.7 && < 5,
                       directory,
                       filepath,
                       regex-posix,
                       containers,
                       yaml,
                       bytestring,
                       split,
                       time,
                       process

  default-language:    Haskell2010

executable hstats
  hs-source-dirs:      src/cli
  main-is:             Main.hs
  other-modules:       Cli
  build-depends:       base >= 4.7 && < 5,
                       hstats

  default-language:    Haskell2010

test-suite hstats-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       UtilTest,
                       GitDirTest
  build-depends:       base >= 4.7 && < 5,
                       hstats,
                       tasty,
                       tasty-hunit,
                       tasty-quickcheck,
                       tasty-smallcheck

  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/githubuser/hstats
